# nats.py

./: .gitignore  .isort.cfg  .travis.yml  CLAUDE.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  PR_DESCRIPTION.md  Pipfile  README.md  Taskfile.yaml  dependencies.md  pyproject.toml  readme.md  setup.cfg  setup.py  todo.md
nats/: CHANGELOG.md  README.md  __init__.py  errors.py  json_util.py  nuid.py  pyproject.toml
nats-client/: README.md  pyproject.toml
nats-client/benches/: __init__.py  bench_client.py  bench_protocol.py  bench_publish.py  bench_subscribe.py
nats-client/examples/: nats-echo.py  nats-pub.py  nats-qsub.py  nats-req.py  nats-rply.py  nats-sub.py
nats-client/src/nats/client/: __init__.py  connection.py  errors.py  message.py  subscription.py
nats-client/src/nats/client/protocol/: command.py  message.py  types.py
nats-client/tests/: __init__.py  conftest.py  test_client.py  test_connection.py  test_examples.py  test_message.py  test_protocol.py  test_status.py  test_subscription.py  test_tls.py
nats-client/tests/certs/: server-cert.pem
nats-client/tests/configs/: resolver_preload.conf  server_auth_user_pass.conf
nats-client/tools/: bench.py
nats-jetstream/: AUDIT.md  CHANGELOG.md  MIGRATION.md  README.md  TODO.md  pyproject.toml
nats-jetstream/examples/: ordered_fetch.py  ordered_messages.py
nats-jetstream/schemas/jetstream/api/v1/: account_info_response.json  account_purge_response.json  consumer_configuration.json  consumer_create_request.json  consumer_create_response.json  consumer_delete_response.json  consumer_getnext_request.json  consumer_info_request.json  consumer_info_response.json  consumer_leader_stepdown_request.json  consumer_leader_stepdown_response.json  consumer_list_request.json  consumer_list_response.json  consumer_names_request.json  consumer_names_response.json  consumer_pause_request.json  consumer_pause_response.json  consumer_reset_request.json  consumer_reset_response.json  consumer_unpin_request.json  consumer_unpin_response.json  definitions.json  meta_leader_stepdown_request.json  meta_leader_stepdown_response.json  meta_server_remove_request.json  meta_server_remove_response.json  pub_ack_response.json  stream_configuration.json  stream_create_request.json  stream_create_response.json  stream_delete_response.json  stream_info_request.json  stream_info_response.json  stream_leader_stepdown_request.json  stream_leader_stepdown_response.json  stream_list_request.json  stream_list_response.json  stream_msg_delete_request.json  stream_msg_delete_response.json  (+21 more)
nats-jetstream/src/nats/jetstream/: __init__.py  errors.py  headers.py  message.py  stream.py  util.py
nats-jetstream/tests/: conftest.py  test_api.py  test_consumer.py  test_jetstream.py  test_message.py  test_ordered_consumer.py  test_stream.py
nats-jetstream/tools/: fetch_schemas.py  generate_types.py
nats-jwt/: pyproject.toml
nats-jwt/src/nats/jwt/: constants.py  exports.py  flatten_model.py  nkeys.py  signingkeys.py  types.py  utils.py
nats-jwt/tests/: test_claims.py  test_jwt.py  test_keypairs.py
nats-server/: README.md  pyproject.toml
nats-server/src/nats/server/: __init__.py
nats-server/src/nats/testing/: __init__.py
nats-server/tests/: __init__.py  conftest.py  test_server.py
nats-server/tests/configs/: invalid.conf  jetstream.conf  port.conf
nats-service/: MIGRATION.md  README.md  pyproject.toml
nats-service/src/nats/service/: __init__.py  errors.py
nats-service/tests/: conftest.py  test_service.py
nats/aio/: __init__.py  client.py  defaults.py  errors.py  js.py  messages.py  msg.py  nuid.py  server.py  stats.py  subscription.py  subscriptions.py  transport.py  types.py  utils.py
nats/aio/js/: __init__.py  client.py
nats/aio/js/api/: consumer.py  kv.py  stream.py  utils.py
nats/aio/js/models/: account_info.py  base.py  clusters.py  consumers.py  messages.py  streams.py
nats/benchmark/: inbox_perf.py  latency_perf.py  obj_fetch_perf.py  parser_perf.py  pub_perf.py  pub_sub_perf.py  sub_next_perf.py  sub_perf.py  sub_perf_messages.py
nats/contrib/: exports.py  imports.py  jwt.py  keys.py  signingkeys.py  utils.py
nats/contrib/accounts/: models.py
nats/contrib/claims/: generic.py  models.py
nats/contrib/operator/: models.py
nats/errors/: __init__.py
nats/examples/: advanced.py  basic.py  client.py  clustered.py  component.py  connect.py  context-manager.py  drain-sub.py  example.py  graceful_shutdown.py  jetstream.py  publish.py  service.py  subscribe.py  tls.py  wildcard.py
nats/examples/common/: args.py
nats/examples/micro/: service.py
nats/examples/nats-sub/: __main__.py
nats/internal/: __init__.py  data.py
nats/io/: client.py  errors.py
nats/jetstream/: __init__.py  api.py  consumer.py  context.py  errors.py  message.py  object.py  publish.py  publisher.py  stream.py
nats/js/: __init__.py  api.py  client.py  config.py  errors.py  headers.py  jsm.py  kv.py  manager.py  object_store.py
nats/micro/: __init__.py  api.py  request.py  service.py
nats/protocol/: __init__.py  command.py  constants.py  parser.py
nats/scripts/: generate_certs.sh  test.sh
nats/src/nats/: __init__.py  errors.py  nuid.py
nats/src/nats/aio/: __init__.py  client.py  errors.py  msg.py  subscription.py  transport.py
nats/src/nats/js/: __init__.py  api.py  client.py  errors.py  kv.py  manager.py  object_store.py
nats/src/nats/micro/: __init__.py  request.py  service.py
nats/src/nats/protocol/: command.py  parser.py
nats/tests/: test_claims.py  test_client.py  test_client_async_await.py  test_client_nkeys.py  test_client_v2.py  test_client_websocket.py  test_compatibility.py  test_custom_headers_websocket.py  test_js.py  test_js_api.py  test_js_pull_subscribe_reconnect.py  test_jwt.py  test_micro_service.py  test_nuid.py  test_parser.py  utils.py
nats/tests/certs/: ca.pem  client-cert.pem
nats/tests/conf/: Dockerfile  no_auth_user.conf  tls_handshake_first.conf
nats/tests/nkeys/: bad-user.creds  bad-user2.creds  bar-user.creds
nats/tests/websocket/: ws_tls.conf
(+297 files in other folders)
