[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nats-py"
authors = [
  { name="Waldemar Quevedo", email="wally@synadia.com" },
]
description = "NATS client for Python"
dynamic = ["version"]
readme = "README.md"
license = { text = "Apache 2 License" }
requires-python = ">=3.7"
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13'
]

[project.urls]
"Homepage" = "https://github.com/nats-io/nats.py"
"Bug Tracker" = "https://github.com/nats-io/nats.py/issues"

[project.optional-dependencies]
nkeys = ['nkeys']
aiohttp = ['aiohttp']
fast_parse = ['fast-mail-parser']

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "nats.aio.client.__version__"}

[tool.setuptools.packages.find]
include = ["nats*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["scripts", "tests"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.mypy]
files = ["nats"]
python_version = "3.7"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
check_untyped_defs = false

[tool.yapf]
split_before_first_argument = true
dedent_closing_brackets = true
coalesce_brackets = true
allow_split_before_dict_value = false
indent_dictionary_value = true
split_before_expression_after_opening_paren = true
