[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nats-service"
version = "0.1.0"
description = 'NATS service framework for Python (ADR-32)'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["nats", "messaging", "service", "microservice"]
authors = [{ name = "Casper Beyer", email = "casper@synadia.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["nats-core"]

[dependency-groups]
dev = ["nats-server"]

[tool.uv.build-backend]
module-name = "nats.service"

[tool.uv.sources]
nats-core = { workspace = true }
nats-server = { workspace = true }

[project.urls]
Documentation = "https://github.com/nats-io/nats.py"
Issues = "https://github.com/nats-io/nats.py/issues"
Source = "https://github.com/nats-io/nats.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
