[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nats-py"
version = "2.11.0"
authors = [
  { name="Waldemar Quevedo", email="wally@synadia.com" },
]
description = "NATS client for Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13'
]

[project.urls]
"Homepage" = "https://github.com/nats-io/nats.py"
"Bug Tracker" = "https://github.com/nats-io/nats.py/issues"

[project.optional-dependencies]
nkeys = ['nkeys']
aiohttp = ['aiohttp']
fast_parse = ['fast-mail-parser']

[tool.uv.build-backend]
module-name = "nats"

